# Restorix

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.codex/environments/: environment.toml
.github/workflows/: codex-review.yml  release.yml
Restorix/: ContentView.swift  RestorixApp.swift
Restorix.xcodeproj/: project.pbxproj
Restorix/App/: AppDelegate.swift  LaunchAtLoginReleaseVerifier.swift  MenuBarController.swift  RestorixApp.swift  WindowManager.swift
Restorix/Assets.xcassets/RestorixIconChecksumWave.imageset/: Contents.json
Restorix/Components/: EmptyStateView.swift  ErrorBanner.swift  HealthBadge.swift  HealthSummaryBanner.swift  NextStepRow.swift  StatusCard.swift  VolumeHealthRow.swift
Restorix/Models/: AppIconChoice.swift  AppModels.swift  Localization.swift
Restorix/Services/: CoreBridge.swift  NotificationService.swift  ReportExportService.swift
Restorix/ViewModels/: AppViewModel.swift
Restorix/Views/: AddRepositoryView.swift  DashboardView.swift  ReportView.swift  RepositoryListView.swift  RootView.swift  SettingsView.swift  SidebarView.swift  VolumeDetailView.swift  VolumeListView.swift
Tools/: generate_restorix_icon_concepts.py  generate_restorix_icons.py
crates/restorix-cli/: Cargo.toml
crates/restorix-cli/src/: main.rs
crates/restorix-core/: Cargo.toml
crates/restorix-core/src/: commands.rs  error.rs  lib.rs  models.rs  process.rs
crates/restorix-core/src/docker/: client.rs  parser.rs
crates/restorix-core/src/report/: markdown.rs
crates/restorix-core/src/restic/: client.rs  parser.rs
crates/restorix-core/src/scanner/: engine.rs  health.rs  matcher.rs  mod.rs
crates/restorix-core/src/storage/: config.rs
crates/restorix-core/tests/: config_tests.rs  health_tests.rs  parser_tests.rs  report_tests.rs
crates/restorix-core/tests/fixtures/: docker_container_inspect.json  docker_ps.jsonl  docker_volume_inspect.json  docker_volume_ls.jsonl  restic_snapshots.json
docs/: macos-architecture.md  mvp-roadmap.md  product.md
script/: build_and_run.sh  package_app.sh  smoke_restic_flow.sh  stamp_release_version.sh  verify_release_package.sh
(+12 files in other folders)
