[workspace]
members = [
    "crates/restorix-core",
    "crates/restorix-cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Restorix"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
which = "6.0"
