[package]
name = "restorix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "restorix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
restorix-core = { path = "../restorix-core" }
serde.workspace = true
serde_json.workspace = true
