[package]
name = "restorix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
dirs-next.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
